--- a/apps/web/src/layouts/Layout.astro
+++ b/apps/web/src/layouts/Layout.astro
@@ -43,7 +43,16 @@ const {title = 'Our School', description = 'Welcome to Our School'} = Astro.prop
   html,
   body {
     margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
   }
 </style>
